--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, intial-scale-1">
-	<title>Latihan 13</title>
+	<title>Tugas Akhir</title>
 	<link rel="stylesheet" href="w3.css">
 	<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-win8.css">
 	<style>
